tests/error/vector_too_big.gw
// [contains] extraneous component of vector value
 @(0,0,0,0,0);
